# hotcart

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  shell.nix
.github/workflows/: tests.yml
src/: hotcart.cpp  tests.cpp
src/hotcart/: cmake.h  common.h  lib-parser.h
src/hotcart/generator/: cmake.h
src/hotcart/pragma/: lib.h
src/hotcart/preprocessor/: preprocessor.h
src/hotcart/preprocessor/fixtures/: standalone.cpp
tools/: build.sh  print-coverage.sh  test.sh  watch-build.sh  watch-test.sh
